--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -30,5 +30,5 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: tamopsgithubacr.azurecr.io/aspcoresample:${{ github.sha }}
+        tags: ${{ secrets.REGISTRY_LOGIN_SERVER }}/aspcoresample:${{ github.sha }}
         file: aspnet-core-dotnet-core/Dockerfile
